--- a/backend/docker-compose.yaml
+++ b/backend/docker-compose.yaml
@@ -29,3 +29,15 @@ services:
       - "5432:5432"
     volumes:
       - .dbdata:/var/lib/postgresql
+
+  celery_worker:
+    container_name: blog_celery_worker
+    build: .
+    command: celery -A core worker --loglevel=info 
+    volumes:
+      - .:/app
+    ports:
+      - "8001:8001"
+    depends_on:
+      - django_redis
+      - django_db
