sort and search

--- a/backend/docker-compose.yaml
+++ b/backend/docker-compose.yaml
@@ -41,3 +41,15 @@ services:
     depends_on:
       - django_redis
       - django_db
+
+  celery_beat:
+    container_name: blog_celery_beat
+    build: .
+    command: celery -A core beat -l INFO --scheduler django_celery_beat.schedulers:DatabaseScheduler
+    volumes:
+      - .:/app
+    ports:
+      - "8002:8002"
+    depends_on:
+      - django_redis
+      - django_db
