--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,7 +1,8 @@
 Django==4.2.16
 djangorestframework==3.15.2
+djangorestframework-api-response==0.1.0
 django-environ==0.9.0
-django-ckeditor==6.7.1
+django-ckeditor==6.3.2
 
 pillow==11.0.0
 
@@ -17,3 +18,6 @@ psycopg2==2.9.4
 
 celery==5.4.0
 django-celery-results==2.5.1
+django-celery-beat==2.7.0
+
+Faker==33.0.0
